# GHM_Comparison

./: .gitignore  Cor_plot.R  GSIM_load_data_cleanedV2.R  README.md  README_max.md  analyse_Budyko.py  analyse_CARAVAN.py  analyse_Drought_Periods.py  analyse_FLUXCOM.py  analyse_FLUXNET.py  analyse_GRUN.py  analyse_GSIM.py  analyse_MOECK.py  analyse_MacDonald.py  analyse_control_runs.py  compare_files_zenodo_vs_gnann.py  correlations_newdomains.py  create_correlations_file.py  create_domain_file.py  plot_summary_corr_newdomains.py  plotting_script_corrplot.R  plotting_script_facets.py  plotting_script_lines.py  plotting_script_maps.py  pyproject.toml  sum_P_data.py
helpers/: avg_group.py  get_nearest_neighbour.py  plotting_fcts.py  weighted_mean.py
helpers/easyit/: easyit.py  remove_outliers.py
model_outputs/provided_by_gnann/: netrad_median.csv  netradiation_clm45_minus.csv  netradiation_matsiro_withoutlakes.csv
preprocessing/: GSIM_load_data_cleaned.R  get_cold_days.py  process_fluxes_and_storages.py  process_p.py  process_p_2a.py  process_rad.py  process_rad_2a.py  process_t.py  process_t_2a.py
results/: correlations_new_domains_new.csv  correlations_partial.csv  data_based_correlations.csv
results/maps/: means.csv  means_dry cold.csv  means_dry warm.csv  means_wet cold.csv  means_wet warm.csv
results/scatterplots/: corrstats_netrad_evap.csv  corrstats_netrad_qr.csv  corrstats_netrad_qtot.csv  corrstats_partial_netrad_evap.csv  corrstats_partial_netrad_qr.csv  corrstats_partial_netrad_qtot.csv  corrstats_partial_pr_evap.csv  corrstats_partial_pr_qr.csv  (+4 more)
(+15 files in other folders)
